--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- styling -->
-   <link rel="stylesheet" href="/header.css">
-  <link rel="stylesheet" href="/main.css">
+   <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <navbar>   
@@ -238,7 +238,7 @@
     </div>
   </div>
 
-  <script src="/mainLogic.js"></script>
+  <script src="mainLogic.js"></script>
 </body>
 </html>
 
