--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="css-navbar-main-container">
       <div class="css-main-logo-container">
         <a src="/main.html">
-          <img src="/img/main-img/Netflix_2015_logo.svg.png" class="css-netflix-logo" alt="netflix logo"> 
+          <img src="../img/main-img/Netflix_2015_logo.svg.png" class="css-netflix-logo" alt="netflix logo"> 
         </a> 
       </div>     
       <div class="css-navbar-buttons-container">        
@@ -21,13 +21,13 @@
           <button class="css-main-button-language">
           
             <div class="css-main-button-signs">
-              <img src="/img/icons/icons8-chinese-che-48.png" class="chinese-letter" alt="chinese che">
+              <img src="../img/icons/icons8-chinese-che-48.png" class="chinese-letter" alt="chinese che">
               <div class="sign-letter-2">A</div>
             </div>
   
             <div class="css-button-language">Polski</div>    
             <div class="css-main-button-icon">
-              <img src="/img/icons/icons8-arrow-down-48.png" class="css-main-button-icon" alt="arrow-down-icon">
+              <img src="../img/icons/icons8-arrow-down-48.png" class="css-main-button-icon" alt="arrow-down-icon">
             </div>  
           </button>
 
@@ -43,7 +43,7 @@
   
   <div class="main-container">
     <div class="css-main-subcontainer-img">
-      <img src="/img/main-img/second-background.jpg" class="background-image" alt="">
+      <img src="../img/main-img/second-background.jpg" class="background-image" alt="">
       <div class="main-subcontainer-information">
         <h1>Filmy, seriale i wiele więcej bez ograniczeń</h1>
         <div class="css-main-subcontainer-img-comment">Oglądaj wszędzie. Anuluj w każdej chwili.</div>
@@ -55,7 +55,7 @@
           </div>
           <button class="css-main-start-using-btn">
             Rozpocznij
-            <img src="/img/icons/icons8-forward-50.png" class="icons-arrow-right" alt="arrow right">
+            <img src="../img/icons/icons8-forward-50.png" class="icons-arrow-right" alt="arrow right">
           </button>
         </div>
       </div>
@@ -95,10 +95,10 @@
         <div class="advantages-propositions">        
           <div class="main-container-proposition-animation">          
             <div class="main-animation-01">
-              <img src="/img/main-img/mobile-0819.jpg" class="main-mobile-img" alt="mobile">             
+              <img src="../img/main-img/mobile-0819.jpg" class="main-mobile-img" alt="mobile">             
               <div class="concret-container-animation">
                 <div class="concret-container-animation-image-container">
-                  <img src="/img/main-img/boxshot.png" class="concret-container-img" alt="boxshoot">
+                  <img src="../img/main-img/boxshot.png" class="concret-container-img" alt="boxshoot">
                 </div>
                 <div class="concret-container-animation-information">
                   <div class="main-icon-info-title">
@@ -151,7 +151,7 @@
         <div class="advantages-propositions">         
           <div class="main-container-proposition-animation">           
             <div class="main-animation-01">
-              <img src="/img/main-img/kids-img.png" class="kids-img" alt="offer for kids">             
+              <img src="../img/main-img/kids-img.png" class="kids-img" alt="offer for kids">             
             </div>
           </div>
           <div class="main-container-proposition-text">
@@ -168,7 +168,7 @@
   
             <button class="question-btn js-question-1">
               Czym jest Netflix?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus1"  alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus1"  alt="plus icon">
             </button>
             <div class="answers-container" id="answer1">
               <p>Netflix to sługa przesyłania strumieniowego, dzięki której użytkownicy mogą korzystać z szerokiej oferty nagradzanych filmów, seriali, programów, anime oraz produkcji dokumentalnych za pośrednictwem tysięcy urządzeń połączonych z internetem.</p>
@@ -177,7 +177,7 @@
 
             <button class="question-btn js-question-2">
               Ile kosztuje korzystanie z serwisu Netflix?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus2" alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus2" alt="plus icon">
             </button>
 
             <div class="answers-container" id="answer2">
@@ -186,7 +186,7 @@
 
             <button class="question-btn js-question-3">
               Gdzie mogę ogladać?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus3" alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus3" alt="plus icon">
             </button>
             <div class="answers-container" id="answer3">
               <p>Oglądaj, gdzie i kiedy chcesz. Zaloguj się za pomocą danych swojego konta w witrynie netflix.com na komputerze lub na innym urządzeniu z dostępem do Internetu i zainstalowaną aplikacją Netflix, takim jak telewizor Smart TV, smartfon, tablet, odtwarzacz multimedialny czy konsola do gier.</p> 
@@ -195,7 +195,7 @@
 
             <button class="question-btn js-question-4">
               Jak zrezygnować z członkostwa?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus4" alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus4" alt="plus icon">
             </button>
             <div class="answers-container" id="answer4">
               <p>Netflix niczego nie narzuca. Żadnych zbędnych umów ani zobowiązań. Możesz w łatwy sposób anulować członkostwo online — wystarczą dwa kliknięcia. Nie naliczamy opłat za rezygnację, dlatego możesz rozpocząć członkostwo i zrezygnować z niego w dowolnej chwili.</p> 
@@ -203,7 +203,7 @@
 
             <button class="question-btn js-question-5">
               Jakie materiały mogę oglądać w serwisie Netflix?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus5" alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus5" alt="plus icon">
             </button>
             <div class="answers-container" id="answer5">
               <p>Serwis Netflix oferuje dostęp do obszernej biblioteki zawierającej filmy pełnometrażowe i dokumentalne, seriale, programy, anime, nagradzane Netflix Originals i nie tylko. Oglądaj do woli, kiedy tylko chcesz.</p> 
@@ -211,7 +211,7 @@
 
             <button class="question-btn js-question-6">
               Czy Netflix jest odpowiedni dla dzieci?
-              <img src="/img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus6" alt="plus icon">
+              <img src="../img/icons/icons8-plus-50.png" class="plus-btn-icon" id="plus6" alt="plus icon">
             </button>
             <div class="answers-container" id="answer6">
               <p>W ramach członkostwa w serwisie Netflix otrzymujesz dostęp do specjalnej sekcji dla dzieci. Młodzi widzowie mogą oglądać tam filmy, seriale i programy przeznaczone właśnie dla nich, a rodzice mają nad wszystkim kontrolę.</p> 
@@ -229,7 +229,7 @@
               </div>
               <button class="css-main-start-using-btn">
                 Rozpocznij
-                <img src="/img/icons/icons8-forward-50.png" class="icons-arrow-right" alt="arrow right">
+                <img src="../img/icons/icons8-forward-50.png" class="icons-arrow-right" alt="arrow right">
               </button>
             </div>
           </div>
