--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- styling -->
    <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="questioncontainer.css">
 </head>
 <body>
   <navbar>   
