--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="questioncontainer.css">
+  <link rel="stylesheet" href="querys.css">
 </head>
 <body>
   <navbar>   
